// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`+ SidebarComponent.vue tests > Should match the snapshot 1`] = `
"<aside id="sidebar" class="transition-all duration-500 absolute flex flex-col items-center justify-between lg:px-8 lg:py-10 lg:my-2 lg:mx-2 rounded-lg bg-white lg:h-auto z-10 w-full lg:w-auto lg:relative lg:opacity-100 lg:left-0 h-screen opacity-100 left-0" sociallinks="[object Object],[object Object]">
  <div class="flex justify-between w-full p-2 lg:hidden items-center"><span class="p-4"></span>
    <name-tag-component-stub classes="before:bg-gray-100" size="medium"></name-tag-component-stub>
    <v-icon name="pr-times" scale="1.5"></v-icon>
  </div>
  <div class="flex flex-col justify-center items-center w-full lg:p-0 px-8 py-10 text-center text-base">
    <picture class="mb-5 max-h-40 max-w-40 overflow-hidden rounded-full"><img class="sm:w-40 sm:h-40 object-cover hover:grayscale-0 transition-all duration-200 hover:scale-110 delay-200" src="/src/assets/avatar-small.webp" width="160" height="160" alt="José Duque"></picture>
    <name-tag-component-stub classes="mb-1 before:bg-transparent text-gray-700 hidden lg:block" size="small"></name-tag-component-stub><span class="text-2xl font-semibold sm:text-xl">José Duque</span><span class="text-gray-600">general.role</span><small class="border-t border-gray-200 pt-px mt-5 mb-0 lg:hidden">general.sidebar.network_links</small>
    <div class="flex flex-row justify-evenly lg:my-2 gap-x-3"><i class="icon"><a href="https://github.com/duquejo01" target="_blank" aria-label="general.sidebar.network_links_label github">
          <v-icon name="bi-github" scale="1.3" class="fill-gray-400 hover:fill-yellow-400 transition-colors"></v-icon>
        </a></i><i class="icon"><a href="https://www.linkedin.com/in/duquejo" target="_blank" aria-label="general.sidebar.network_links_label linkedln">
          <v-icon name="co-linkedin-in" scale="1.3" class="fill-gray-400 hover:fill-yellow-400 transition-colors"></v-icon>
        </a></i></div><small class="border-t border-gray-200 pt-px mt-3 mb-0 lg:hidden">general.sidebar.theme_options</small>
    <lang-select-component-stub id="sidebar-language-selector" class="lg:hidden"></lang-select-component-stub>
  </div>
  <navigation-links-stub></navigation-links-stub>
</aside>"
`;

exports[`+ SidebarComponent.vue tests > Should match the snapshot if socialLinks are not given 1`] = `
"<aside id="sidebar" class="transition-all duration-500 absolute flex flex-col items-center justify-between lg:px-8 lg:py-10 lg:my-2 lg:mx-2 rounded-lg bg-white lg:h-auto z-10 w-full lg:w-auto lg:relative lg:opacity-100 lg:left-0 h-screen opacity-100 left-0" sociallinks="">
  <div class="flex justify-between w-full p-2 lg:hidden items-center"><span class="p-4"></span>
    <name-tag-component-stub classes="before:bg-gray-100" size="medium"></name-tag-component-stub>
    <v-icon name="pr-times" scale="1.5"></v-icon>
  </div>
  <div class="flex flex-col justify-center items-center w-full lg:p-0 px-8 py-10 text-center text-base">
    <picture class="mb-5 max-h-40 max-w-40 overflow-hidden rounded-full"><img class="sm:w-40 sm:h-40 object-cover hover:grayscale-0 transition-all duration-200 hover:scale-110 delay-200" src="/src/assets/avatar-small.webp" width="160" height="160" alt="José Duque"></picture>
    <name-tag-component-stub classes="mb-1 before:bg-transparent text-gray-700 hidden lg:block" size="small"></name-tag-component-stub><span class="text-2xl font-semibold sm:text-xl">José Duque</span><span class="text-gray-600">general.role</span><small class="border-t border-gray-200 pt-px mt-5 mb-0 lg:hidden">general.sidebar.network_links</small>
    <div class="flex flex-row justify-evenly lg:my-2 gap-x-3"><i class="icon"><a href="https://github.com/duquejo01" target="_blank" aria-label="general.sidebar.network_links_label github">
          <v-icon name="bi-github" scale="1.3" class="fill-gray-400 hover:fill-yellow-400 transition-colors"></v-icon>
        </a></i><i class="icon"><a href="https://www.linkedin.com/in/duquejo" target="_blank" aria-label="general.sidebar.network_links_label linkedln">
          <v-icon name="co-linkedin-in" scale="1.3" class="fill-gray-400 hover:fill-yellow-400 transition-colors"></v-icon>
        </a></i></div><small class="border-t border-gray-200 pt-px mt-3 mb-0 lg:hidden">general.sidebar.theme_options</small>
    <lang-select-component-stub id="sidebar-language-selector" class="lg:hidden"></lang-select-component-stub>
  </div>
  <navigation-links-stub></navigation-links-stub>
</aside>"
`;
